Fixed dark mode.

--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -24,14 +24,16 @@
 }
 
 html[data-theme='dark'] {
-  --global-bg-color: #{$grey-color-dark};
-  --global-text-color: #{$grey-color-light};
+  --global-bg-color: #{$dark-mode-black};
+  --global-text-color: #{$dark-mode-white};
   --global-theme-color: #{$cyan-color};
   --global-hover-color: #{$light-cyan-color};
   --global-footer-bg-color: #{$grey-color-light};
   --global-footer-text-color: #{$grey-color-dark};
   --global-footer-link-color: #{$black-color};
-  --global-icon-color: navajowhite;
+  --global-icon-color: #{$dark-mode-white};
+  // --global-link-color: #{$cyan-color};
+  --global-text-color: #{$dark-mode-white};
 
   .fa-sun {
     padding-left: 10px;
